Use addData for order/quote fixture Added customer_email to Order.yml

--- a/src/MageTest/Manager/Fixtures/Order.yml
+++ b/src/MageTest/Manager/Fixtures/Order.yml
@@ -1,3 +1,4 @@
 sales/quote (customer/address catalog/product):
   shipping_method: flatrate_flatrate
   payment_method: checkmo
+  customer_email: test@example.com
